--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "description": "A web application for promoting zero waste living.",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0"
